--- a/refs.bib
+++ b/refs.bib
@@ -109,3 +109,10 @@
   year={2021},
   publisher={ACM New York, NY, USA}
 }
+
+@book{anderson2001taxonomy,
+  title={A taxonomy for learning, teaching, and assessing: A revision of Bloom's taxonomy of educational objectives: complete edition},
+  author={Anderson, Lorin W and Krathwohl, David R},
+  year={2001},
+  publisher={Addison Wesley Longman, Inc.}
+}
