various small updates

--- a/assets/partials/before-body.tex
+++ b/assets/partials/before-body.tex
@@ -9,6 +9,10 @@ $else$
 
 \newcommand{\littleblank}{\rule{.5in}{.01in}~~}
 \newcommand{\bigblank}{\rule{2.5in}{.01in}~~}
+\renewcommand{\setminus}{\backslash}
+
+
+\raggedbottom
 
 \vspace{-.6in}
 
@@ -18,10 +22,7 @@ $else$
 
 \textbf{Student ID Number:} \underline{\hspace*{3in}} \\[2mm]
 
-\textbf{Date:} \underline{\hspace*{1.5in}} 
-\textbf{Start time:} \underline{\hspace*{1.2in}} 
-\textbf{~ End time:} \underline{\hspace*{1.2in}} \\[-2mm]
-
+\textbf{Date:} \underline{\hspace*{1.5in}} \\ 
 
 {\Large{Honor Code:}}
 \vspace{.6in}
@@ -29,10 +30,12 @@ $else$
 Signature: \bigblank\\
 
 
-This exam is closed book, closed notes, closed computer, closed calculator,
-etc. You may only use (1) the ``cheat sheet'' provided with this exam and (2) a single double-sided letter sheet of notes of your own creation. \textbf{You have 3 hours.}
+This quiz is closed book, closed notes, closed computer, closed calculator,
+etc. 
+You may only use (1) the ``cheat sheet'' provided with this quiz. 
 Read the problem descriptions carefully and write your answers \textbf{clearly, legibly, in the space provided}. 
-Circle or otherwise indicate your answer if it might not be easily identified. You may use extra sheets of paper, stapled to your exam, if you need more room, as long as the problem number is clearly labeled and your name is on the paper. 
+Circle or otherwise indicate your answer if it might not be easily identified. 
+You may use extra sheets of paper, stapled to your quiz, if you need more room, as long as the problem number is clearly labeled and your name is on the paper. 
 If you attached extra sheets indicate in the provided space for the problem to look for the extra sheets for that problem.
 
 \pagebreak
@@ -44,3 +47,4 @@ $abstract$
 \end{abstract}
 $endif$
 $endif$
+
