--- a/pages/learning-targets.qmd
+++ b/pages/learning-targets.qmd
@@ -31,7 +31,7 @@ title: Learning Targets
 
 **Probability**
 
-- **P1**: I can evaluate marginal, joint, and conditional probabilities of events on discrete sample spaces. 
-- **P2**: I can evaluate expectations and conditional expectations of random variables on discrete sample spaces. 
+- **PR1**: I can evaluate marginal, joint, and conditional probabilities of events on discrete sample spaces. 
+- **PR2**: I can evaluate expectations and conditional expectations of random variables on discrete sample spaces. 
 
 
