--- a/content/modules/11-logic-2/prep.qmd
+++ b/content/modules/11-logic-2/prep.qmd
@@ -26,4 +26,16 @@ title: "Implication, Inverse, Converse, and Contrapositive"
  
 # Warmup Problems (~30 mins) 
 
-*Please complete these problems with a pencil/pen and paper. Then, scan/photograph your solutions and upload them to Canvas.*
+*Please complete these problems with a pencil/pen and paper. Then, scan/photograph your solutions and upload them to Canvas.* 
+
+## Problem 1
+ 
+{{< include ../../../content/problems/logic/implications-2.qmd >}}
+
+## Problem 2
+
+{{< include ../../../content/problems/logic/implications-1.qmd >}}
+
+## Problem 3
+  
+{{< include ../../../content/problems/logic/implications-3.qmd >}}
