--- a/assignments/labs/01-intro-and-truth-tables.ipynb
+++ b/assignments/labs/01-intro-and-truth-tables.ipynb
@@ -100,11 +100,11 @@
       "source": [
         "# Part B: Writing Math\n",
         "\n",
-        "You can write mathematics in Google Colab's Markdown engine by enclosing special commands inside \\$dollar signs\\$. For example, the command\n",
+        "You can write mathematics in Google Colab's Markdown engine by enclosing special commands inside `$` dollar signs `$`. For example, the command\n",
         "\n",
         "`$ p \\lor q $`\n",
         "\n",
-        "will render in Colab as\n",
+        "entered into a Markdown cell will render in Colab as\n",
         "\n",
         "$p \\lor q$\n",
         "\n",
@@ -147,12 +147,16 @@
         "1. $\\lnot (p \\land q)$\n",
         "2. $\\lnot p \\lor \\lnot q$\n",
         "\n",
-        "It's ok to write your truth tables \"casually\" using Markdown, but you can also structure them as *tables* using special Markdown syntax. Double click into this markdown cell to see how I created the beginnings of a truth table:\n",
+        "It's ok to write your truth tables \"casually\" using Markdown, but you can also structure them as *tables* using some more advanced $\\LaTeX$ syntax. Double click into this markdown cell to see how I created the beginnings of a truth table:\n",
         "\n",
-        "| $p$ | $q$ | $p \\land q$ |\n",
-        "|-----|-----|-------------|\n",
-        "| T   |   T | ?           |\n",
-        "| T   |   F | ?           |"
+        "$$\n",
+        "\\begin{array}{c|c|c}\n",
+        "p & q & p \\lor q \\\\\n",
+        "\\hline\n",
+        "T & T & ? \\\\\n",
+        "T & F & ? \\\\\n",
+        "\\end{array}\n",
+        "$$"
       ]
     },
     {
